--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,9 @@
 server.port=8081
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=validate
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres?currentSchema=test_bd
 spring.datasource.username=postgres
 spring.datasource.password=postgres
+
+spring.jpa.generate-ddl=true
+spring.jpa.show-sql=true
