--- a/build.gradle
+++ b/build.gradle
@@ -6,8 +6,13 @@ plugins {
 }
 
 group = 'com.website'
-version = '1.3-SNAPSHOT'
-sourceCompatibility = '1.13'
+version = '1.4-SNAPSHOT'
+sourceCompatibility = '13'
+mainClassName = 'com.website.db.DbApplication'
+
+//springBoot {
+//    mainClassName = 'com.website.db.DbApplication'
+//}
 
 configurations {
     developmentOnly
@@ -24,6 +29,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-webflux'
     implementation 'org.springframework.boot:spring-boot-starter-security'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     runtimeOnly 'org.postgresql:postgresql'
@@ -31,17 +37,15 @@ dependencies {
         exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
     }
     testImplementation 'io.projectreactor:reactor-test'
+    testImplementation 'org.springframework.security:spring-security-test'
 }
 
-jar {
+bootJar {
     manifest {
         attributes('Implementation-Title': project.name,
-                'Implementation-Version': project.version)
+                'Implementation-Version': project.version,
+                'Start-Class': mainClassName)
     }
-}
-
-application {
-    mainClassName = 'main/java/com.website.db/DbApplication'
 }
 
 test {
