--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,11 @@
 server.port=8081
 
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres?currentSchema=test_bd
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 
 spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
+# spring.jpa.open-in-view=false
