Add travis file

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,9 @@ sudo: false
 
 language: java
 
-jdk: oraclejdk13
+jdk:
+   - oraclejdk13
+   - openjdk13
 
 java:
   - 1.13
@@ -13,5 +15,16 @@ java:
 
 install:
   - chmod +x ./gradlew
+  - ./gradlew assemble
 
-script: ./gradlew build
+before_cache:
+  - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
+  - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
+cache:
+  directories:
+    - $HOME/.gradle/caches/
+    - $HOME/.gradle/wrapper/
+
+script:
+  - ./gradlew check
+  - ./gradlew build
