Add travis file

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,10 +13,6 @@ java:
 #  only:
 #    - master
 
-install:
-  - chmod +x ./gradlew
-  - ./gradlew assemble
-
 before_cache:
   - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
   - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
@@ -25,6 +21,10 @@ cache:
     - $HOME/.gradle/caches/
     - $HOME/.gradle/wrapper/
 
+install:
+  - chmod +x ./gradlew
+  - ./gradlew assemble
+
 script:
   - ./gradlew check
-  - ./gradlew build
+  - ./gradlew build -x test
